# DTEGNN

./: .gitignore  LICENSE  README.md  pyproject.toml
dtegnn/: __init__.py
dtegnn/config/: example.yml
dtegnn/data/: CreateDataset.py  EGNNClass.py  NewInputClass.py  ValNewInput.py
dtegnn/model/layers/: VerletLayer.py  layers.py
dtegnn/model/nn/: networks.py
dtegnn/scripts/: train.py
dtegnn/training/: Trainer.py
dtegnn/utils/: Loss.py  PrepareTrainer.py  Simulate.py
envs/: env-cu121.yml
examples/: README.md  evaluate.py  example_indices.npy
